# ARingQ

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  README.md
include/: Confusion.h  Core.h  Cryptography.h  File.h  Launch.h  LoadLibrary.h  Parameter.h  TLSLoad.h  augustEncryption.h  utils.h
input/: parameter.txt  s24400.txt  test1_output.txt  test2_key.txt  test2_output.txt
lib/: ALaunchBase.lib  ARingQ.ilk  ApcInjectLoad.lib  CreateThreatPoolWaitLoad.lib  DirectlyLoad.lib  DynamicLoad.lib  DynamicLoadPlus.lib  EarlyBirdAPC_InjetcLoad.lib  FiberLoad.lib  Launch.lib  NtCreateSectionLoad.lib  NtTestAlertLoad.lib  OEPHiijack_InjectLoad.lib  SEHExceptLoad.lib  SyscallLoad.lib  ThreadHiijack_InjectLoad.lib
plugin/: EarlyBirdAPC_InjetcLoad.h  OEPHiijack_InjectLoad.h  SEHExceptLoad.h  TLSCallbackLoad.h  apcLoad.h  createThreatPoolWaitLoad.h  directlyLoad.h  dynamicLoad.h  dynamicLoadPlusLoad.h  fiberLoad.h  ntCreateSectionLoad.h  ntTestAlertLoad.h  syscallLoad.h  threadHiijack_InjectLoad.h
src/: Confusion.cpp  Core.cpp  Cryptography.cpp  File.cpp  Launch.cpp  LoadLibrary.cpp  Parameter.cpp  TLSLoad.cpp  augustEncryption.cpp  main.cpp  utils.cpp
src/utils/: utils.cpp
